@@ -91,6 +91,7 @@ OptionHandlers OptionHandlerFactory::createOptionHandlers()
   handlers.push_back(new DefaultOptionHandler(PREF_USER_AGENT));
   handlers.push_back(new BooleanOptionHandler(PREF_NO_NETRC));
   handlers.push_back(new DefaultOptionHandler(PREF_INPUT_FILE));
+  handlers.push_back(new NumberOptionHandler(PREF_MAX_CONCURRENT_DOWNLOADS, 1, 15));
 
   return handlers;
 }
