@@ -1,3 +1,14 @@
+2007-06-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
+	Added -j command-line option.
+	* src/OptionHandlerFactory.cc (createOptionHandlers)
+	* src/main.cc
+
+	* src/ByteArrayDiskWriter.h, src/ByteArrayDiskWriter.cc
+	Rewritten using stringstream.
+	* src/TrackerUpdateCommand.h, src/TrackerUpdateCommand.cc
+	Rewritten using stringstream.
+	
 2007-06-05  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
 	Make download size shown in MB, KB.
